--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Roster</string>
+    <string name="save">SAVE</string>
+    <string name="edit">EDIT</string>
 </resources>
