--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="previous">PREV</string>
     <string name="centers">Centers</string>
     <string name="new_participant">New Participant</string>
+    <string name="seeding_dialog_title">Generating Seed Data</string>
+    <string name="seeding_dialog_message">Please Wait!</string>
 </resources>
